parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    THEN
    VOID
    FUNCTION

Grammar

Rule 0     S' -> program
Rule 1     program -> decSeq
Rule 2     dec -> varDec
Rule 3     dec -> decFunc
Rule 4     dec -> decProc
Rule 5     decFunc -> type ID LPAREN paramList RPAREN LCBRAC block RCBRAC
Rule 6     decProc -> ID LPAREN paramList RPAREN LCBRAC block RCBRAC
Rule 7     varDec -> type varSpecSeq SCOLON
Rule 8     varSpec -> ID
Rule 9     varSpec -> ID ATTR literal
Rule 10    varSpec -> ID LBRAC num RBRAC
Rule 11    varSpec -> ID LBRAC num RBRAC ATTR LCBRAC literalSeq RCBRAC
Rule 12    varSpecSeq -> varSpec COMMA varSpecSeq
Rule 13    varSpecSeq -> varSpec
Rule 14    literalSeq -> literal COMMA literalSeq
Rule 15    literalSeq -> literal
Rule 16    paramList -> paramSeq
Rule 17    paramList -> empty
Rule 18    param -> type ID
Rule 19    param -> type ID LBRAC RBRAC
Rule 20    block -> varDecList stmtList
Rule 21    varDecList -> varDec varDecList
Rule 22    varDecList -> empty
Rule 23    var -> ID
Rule 24    var -> ID LBRAC exp RBRAC
Rule 25    exp -> binop
Rule 26    exp -> NOT exp
Rule 27    exp -> exp QMARK exp COLON exp
Rule 28    exp -> subCall
Rule 29    exp -> var
Rule 30    exp -> literal
Rule 31    exp -> LPAREN exp RPAREN
Rule 32    binop -> exp PLUS exp
Rule 33    binop -> exp MINUS exp
Rule 34    binop -> exp MULT exp
Rule 35    binop -> exp DIV exp
Rule 36    binop -> exp MOD exp
Rule 37    binop -> exp EQUAL exp
Rule 38    binop -> exp DIFF exp
Rule 39    binop -> exp LESSEQ exp
Rule 40    binop -> exp GREATEQ exp
Rule 41    binop -> exp GREATER exp
Rule 42    binop -> exp LESS exp
Rule 43    binop -> exp AND exp
Rule 44    binop -> exp OR exp
Rule 45    stmt -> ifStmt
Rule 46    stmt -> whileStmt
Rule 47    stmt -> forStmt
Rule 48    stmt -> breakStmt
Rule 49    stmt -> returnStmt
Rule 50    stmt -> readStmt
Rule 51    stmt -> writeStmt
Rule 52    stmt -> assign SCOLON
Rule 53    stmt -> subCall SCOLON
Rule 54    ifStmt -> IF LPAREN exp RPAREN LCBRAC block RCBRAC
Rule 55    ifStmt -> IF LPAREN exp RPAREN LCBRAC block RCBRAC ELSE RCBRAC block LCBRAC
Rule 56    whileStmt -> WHILE LPAREN exp RPAREN LCBRAC block RCBRAC
Rule 57    forStmt -> FOR LPAREN assign SCOLON exp SCOLON assign RPAREN LCBRAC block RCBRAC
Rule 58    breakStmt -> BREAK SCOLON
Rule 59    returnStmt -> RETURN SCOLON
Rule 60    returnStmt -> RETURN exp SCOLON
Rule 61    returnStmt -> RETURN error SCOLON
Rule 62    readStmt -> READ var SCOLON
Rule 63    writeStmt -> WRITE expList SCOLON
Rule 64    assign -> var ATTR exp
Rule 65    assign -> var AVALPLUS exp
Rule 66    assign -> var AVALMINUS exp
Rule 67    assign -> var AVALMULT exp
Rule 68    assign -> var AVALDIV exp
Rule 69    assign -> var AVALMOD exp
Rule 70    subCall -> ID LPAREN expList RPAREN
Rule 71    expList -> expSeq
Rule 72    expList -> empty
Rule 73    expSeq -> exp COMMA expSeq
Rule 74    expSeq -> exp
Rule 75    stmtList -> stmt stmtList
Rule 76    stmtList -> empty
Rule 77    literal -> num
Rule 78    literal -> str
Rule 79    literal -> logic
Rule 80    num -> NUM
Rule 81    str -> STR
Rule 82    logic -> TRUE
Rule 83    logic -> FALSE
Rule 84    type -> INT
Rule 85    type -> STRING
Rule 86    type -> BOOL
Rule 87    decSeq -> dec decSeq
Rule 88    decSeq -> dec
Rule 89    paramSeq -> param COMMA paramSeq
Rule 90    paramSeq -> param
Rule 91    empty -> <empty>

Terminals, with rules where they appear

AND                  : 43
ATTR                 : 9 11 64
AVALDIV              : 68
AVALMINUS            : 66
AVALMOD              : 69
AVALMULT             : 67
AVALPLUS             : 65
BOOL                 : 86
BREAK                : 58
COLON                : 27
COMMA                : 12 14 73 89
DIFF                 : 38
DIV                  : 35
ELSE                 : 55
EQUAL                : 37
FALSE                : 83
FOR                  : 57
FUNCTION             : 
GREATEQ              : 40
GREATER              : 41
ID                   : 5 6 8 9 10 11 18 19 23 24 70
IF                   : 54 55
INT                  : 84
LBRAC                : 10 11 19 24
LCBRAC               : 5 6 11 54 55 55 56 57
LESS                 : 42
LESSEQ               : 39
LPAREN               : 5 6 31 54 55 56 57 70
MINUS                : 33
MOD                  : 36
MULT                 : 34
NOT                  : 26
NUM                  : 80
OR                   : 44
PLUS                 : 32
QMARK                : 27
RBRAC                : 10 11 19 24
RCBRAC               : 5 6 11 54 55 55 56 57
READ                 : 62
RETURN               : 59 60 61
RPAREN               : 5 6 31 54 55 56 57 70
SCOLON               : 7 52 53 57 57 58 59 60 61 62 63
STR                  : 81
STRING               : 85
THEN                 : 
TRUE                 : 82
VOID                 : 
WHILE                : 56
WRITE                : 63
error                : 61

Nonterminals, with rules where they appear

assign               : 52 57 57
binop                : 25
block                : 5 6 54 55 55 56 57
breakStmt            : 48
dec                  : 87 88
decFunc              : 3
decProc              : 4
decSeq               : 1 87
empty                : 17 22 72 76
exp                  : 24 26 27 27 27 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 54 55 56 57 60 64 65 66 67 68 69 73 74
expList              : 63 70
expSeq               : 71 73
forStmt              : 47
ifStmt               : 45
literal              : 9 14 15 30
literalSeq           : 11 14
logic                : 79
num                  : 10 11 77
param                : 89 90
paramList            : 5 6
paramSeq             : 16 89
program              : 0
readStmt             : 50
returnStmt           : 49
stmt                 : 75
stmtList             : 20 75
str                  : 78
subCall              : 28 53
type                 : 5 7 18 19
var                  : 29 62 64 65 66 67 68 69
varDec               : 2 21
varDecList           : 20 21
varSpec              : 12 13
varSpecSeq           : 7 12
whileStmt            : 46
writeStmt            : 51

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . decSeq
    (87) decSeq -> . dec decSeq
    (88) decSeq -> . dec
    (2) dec -> . varDec
    (3) dec -> . decFunc
    (4) dec -> . decProc
    (7) varDec -> . type varSpecSeq SCOLON
    (5) decFunc -> . type ID LPAREN paramList RPAREN LCBRAC block RCBRAC
    (6) decProc -> . ID LPAREN paramList RPAREN LCBRAC block RCBRAC
    (84) type -> . INT
    (85) type -> . STRING
    (86) type -> . BOOL

    ID              shift and go to state 5
    INT             shift and go to state 3
    STRING          shift and go to state 11
    BOOL            shift and go to state 7

    varDec                         shift and go to state 1
    decProc                        shift and go to state 2
    decSeq                         shift and go to state 4
    program                        shift and go to state 6
    dec                            shift and go to state 8
    type                           shift and go to state 9
    decFunc                        shift and go to state 10

state 1

    (2) dec -> varDec .

    ID              reduce using rule 2 (dec -> varDec .)
    INT             reduce using rule 2 (dec -> varDec .)
    STRING          reduce using rule 2 (dec -> varDec .)
    BOOL            reduce using rule 2 (dec -> varDec .)
    $end            reduce using rule 2 (dec -> varDec .)


state 2

    (4) dec -> decProc .

    ID              reduce using rule 4 (dec -> decProc .)
    INT             reduce using rule 4 (dec -> decProc .)
    STRING          reduce using rule 4 (dec -> decProc .)
    BOOL            reduce using rule 4 (dec -> decProc .)
    $end            reduce using rule 4 (dec -> decProc .)


state 3

    (84) type -> INT .

    ID              reduce using rule 84 (type -> INT .)


state 4

    (1) program -> decSeq .

    $end            reduce using rule 1 (program -> decSeq .)


state 5

    (6) decProc -> ID . LPAREN paramList RPAREN LCBRAC block RCBRAC

    LPAREN          shift and go to state 12


state 6

    (0) S' -> program .



state 7

    (86) type -> BOOL .

    ID              reduce using rule 86 (type -> BOOL .)


state 8

    (87) decSeq -> dec . decSeq
    (88) decSeq -> dec .
    (87) decSeq -> . dec decSeq
    (88) decSeq -> . dec
    (2) dec -> . varDec
    (3) dec -> . decFunc
    (4) dec -> . decProc
    (7) varDec -> . type varSpecSeq SCOLON
    (5) decFunc -> . type ID LPAREN paramList RPAREN LCBRAC block RCBRAC
    (6) decProc -> . ID LPAREN paramList RPAREN LCBRAC block RCBRAC
    (84) type -> . INT
    (85) type -> . STRING
    (86) type -> . BOOL

    $end            reduce using rule 88 (decSeq -> dec .)
    ID              shift and go to state 5
    INT             shift and go to state 3
    STRING          shift and go to state 11
    BOOL            shift and go to state 7

    varDec                         shift and go to state 1
    decProc                        shift and go to state 2
    decSeq                         shift and go to state 13
    dec                            shift and go to state 8
    type                           shift and go to state 9
    decFunc                        shift and go to state 10

state 9

    (7) varDec -> type . varSpecSeq SCOLON
    (5) decFunc -> type . ID LPAREN paramList RPAREN LCBRAC block RCBRAC
    (12) varSpecSeq -> . varSpec COMMA varSpecSeq
    (13) varSpecSeq -> . varSpec
    (8) varSpec -> . ID
    (9) varSpec -> . ID ATTR literal
    (10) varSpec -> . ID LBRAC num RBRAC
    (11) varSpec -> . ID LBRAC num RBRAC ATTR LCBRAC literalSeq RCBRAC

    ID              shift and go to state 16

    varSpec                        shift and go to state 14
    varSpecSeq                     shift and go to state 15

state 10

    (3) dec -> decFunc .

    ID              reduce using rule 3 (dec -> decFunc .)
    INT             reduce using rule 3 (dec -> decFunc .)
    STRING          reduce using rule 3 (dec -> decFunc .)
    BOOL            reduce using rule 3 (dec -> decFunc .)
    $end            reduce using rule 3 (dec -> decFunc .)


state 11

    (85) type -> STRING .

    ID              reduce using rule 85 (type -> STRING .)


state 12

    (6) decProc -> ID LPAREN . paramList RPAREN LCBRAC block RCBRAC
    (16) paramList -> . paramSeq
    (17) paramList -> . empty
    (89) paramSeq -> . param COMMA paramSeq
    (90) paramSeq -> . param
    (91) empty -> .
    (18) param -> . type ID
    (19) param -> . type ID LBRAC RBRAC
    (84) type -> . INT
    (85) type -> . STRING
    (86) type -> . BOOL

    RPAREN          reduce using rule 91 (empty -> .)
    INT             shift and go to state 3
    STRING          shift and go to state 11
    BOOL            shift and go to state 7

    paramSeq                       shift and go to state 17
    param                          shift and go to state 19
    paramList                      shift and go to state 18
    type                           shift and go to state 21
    empty                          shift and go to state 20

state 13

    (87) decSeq -> dec decSeq .

    $end            reduce using rule 87 (decSeq -> dec decSeq .)


state 14

    (12) varSpecSeq -> varSpec . COMMA varSpecSeq
    (13) varSpecSeq -> varSpec .

    COMMA           shift and go to state 22
    SCOLON          reduce using rule 13 (varSpecSeq -> varSpec .)


state 15

    (7) varDec -> type varSpecSeq . SCOLON

    SCOLON          shift and go to state 23


state 16

    (5) decFunc -> type ID . LPAREN paramList RPAREN LCBRAC block RCBRAC
    (8) varSpec -> ID .
    (9) varSpec -> ID . ATTR literal
    (10) varSpec -> ID . LBRAC num RBRAC
    (11) varSpec -> ID . LBRAC num RBRAC ATTR LCBRAC literalSeq RCBRAC

    LPAREN          shift and go to state 25
    COMMA           reduce using rule 8 (varSpec -> ID .)
    SCOLON          reduce using rule 8 (varSpec -> ID .)
    ATTR            shift and go to state 26
    LBRAC           shift and go to state 24


state 17

    (16) paramList -> paramSeq .

    RPAREN          reduce using rule 16 (paramList -> paramSeq .)


state 18

    (6) decProc -> ID LPAREN paramList . RPAREN LCBRAC block RCBRAC

    RPAREN          shift and go to state 27


state 19

    (89) paramSeq -> param . COMMA paramSeq
    (90) paramSeq -> param .

    COMMA           shift and go to state 28
    RPAREN          reduce using rule 90 (paramSeq -> param .)


state 20

    (17) paramList -> empty .

    RPAREN          reduce using rule 17 (paramList -> empty .)


state 21

    (18) param -> type . ID
    (19) param -> type . ID LBRAC RBRAC

    ID              shift and go to state 29


state 22

    (12) varSpecSeq -> varSpec COMMA . varSpecSeq
    (12) varSpecSeq -> . varSpec COMMA varSpecSeq
    (13) varSpecSeq -> . varSpec
    (8) varSpec -> . ID
    (9) varSpec -> . ID ATTR literal
    (10) varSpec -> . ID LBRAC num RBRAC
    (11) varSpec -> . ID LBRAC num RBRAC ATTR LCBRAC literalSeq RCBRAC

    ID              shift and go to state 31

    varSpec                        shift and go to state 14
    varSpecSeq                     shift and go to state 30

state 23

    (7) varDec -> type varSpecSeq SCOLON .

    INT             reduce using rule 7 (varDec -> type varSpecSeq SCOLON .)
    STRING          reduce using rule 7 (varDec -> type varSpecSeq SCOLON .)
    BOOL            reduce using rule 7 (varDec -> type varSpecSeq SCOLON .)
    IF              reduce using rule 7 (varDec -> type varSpecSeq SCOLON .)
    WHILE           reduce using rule 7 (varDec -> type varSpecSeq SCOLON .)
    FOR             reduce using rule 7 (varDec -> type varSpecSeq SCOLON .)
    BREAK           reduce using rule 7 (varDec -> type varSpecSeq SCOLON .)
    RETURN          reduce using rule 7 (varDec -> type varSpecSeq SCOLON .)
    READ            reduce using rule 7 (varDec -> type varSpecSeq SCOLON .)
    WRITE           reduce using rule 7 (varDec -> type varSpecSeq SCOLON .)
    ID              reduce using rule 7 (varDec -> type varSpecSeq SCOLON .)
    RCBRAC          reduce using rule 7 (varDec -> type varSpecSeq SCOLON .)
    LCBRAC          reduce using rule 7 (varDec -> type varSpecSeq SCOLON .)
    $end            reduce using rule 7 (varDec -> type varSpecSeq SCOLON .)


state 24

    (10) varSpec -> ID LBRAC . num RBRAC
    (11) varSpec -> ID LBRAC . num RBRAC ATTR LCBRAC literalSeq RCBRAC
    (80) num -> . NUM

    NUM             shift and go to state 33

    num                            shift and go to state 32

state 25

    (5) decFunc -> type ID LPAREN . paramList RPAREN LCBRAC block RCBRAC
    (16) paramList -> . paramSeq
    (17) paramList -> . empty
    (89) paramSeq -> . param COMMA paramSeq
    (90) paramSeq -> . param
    (91) empty -> .
    (18) param -> . type ID
    (19) param -> . type ID LBRAC RBRAC
    (84) type -> . INT
    (85) type -> . STRING
    (86) type -> . BOOL

    RPAREN          reduce using rule 91 (empty -> .)
    INT             shift and go to state 3
    STRING          shift and go to state 11
    BOOL            shift and go to state 7

    paramSeq                       shift and go to state 17
    param                          shift and go to state 19
    paramList                      shift and go to state 34
    type                           shift and go to state 21
    empty                          shift and go to state 20

state 26

    (9) varSpec -> ID ATTR . literal
    (77) literal -> . num
    (78) literal -> . str
    (79) literal -> . logic
    (80) num -> . NUM
    (81) str -> . STR
    (82) logic -> . TRUE
    (83) logic -> . FALSE

    NUM             shift and go to state 33
    STR             shift and go to state 36
    TRUE            shift and go to state 41
    FALSE           shift and go to state 35

    literal                        shift and go to state 37
    num                            shift and go to state 38
    str                            shift and go to state 39
    logic                          shift and go to state 40

state 27

    (6) decProc -> ID LPAREN paramList RPAREN . LCBRAC block RCBRAC

    LCBRAC          shift and go to state 42


state 28

    (89) paramSeq -> param COMMA . paramSeq
    (89) paramSeq -> . param COMMA paramSeq
    (90) paramSeq -> . param
    (18) param -> . type ID
    (19) param -> . type ID LBRAC RBRAC
    (84) type -> . INT
    (85) type -> . STRING
    (86) type -> . BOOL

    INT             shift and go to state 3
    STRING          shift and go to state 11
    BOOL            shift and go to state 7

    paramSeq                       shift and go to state 43
    type                           shift and go to state 21
    param                          shift and go to state 19

state 29

    (18) param -> type ID .
    (19) param -> type ID . LBRAC RBRAC

    COMMA           reduce using rule 18 (param -> type ID .)
    RPAREN          reduce using rule 18 (param -> type ID .)
    LBRAC           shift and go to state 44


state 30

    (12) varSpecSeq -> varSpec COMMA varSpecSeq .

    SCOLON          reduce using rule 12 (varSpecSeq -> varSpec COMMA varSpecSeq .)


state 31

    (8) varSpec -> ID .
    (9) varSpec -> ID . ATTR literal
    (10) varSpec -> ID . LBRAC num RBRAC
    (11) varSpec -> ID . LBRAC num RBRAC ATTR LCBRAC literalSeq RCBRAC

    COMMA           reduce using rule 8 (varSpec -> ID .)
    SCOLON          reduce using rule 8 (varSpec -> ID .)
    ATTR            shift and go to state 26
    LBRAC           shift and go to state 24


state 32

    (10) varSpec -> ID LBRAC num . RBRAC
    (11) varSpec -> ID LBRAC num . RBRAC ATTR LCBRAC literalSeq RCBRAC

    RBRAC           shift and go to state 45


state 33

    (80) num -> NUM .

    QMARK           reduce using rule 80 (num -> NUM .)
    PLUS            reduce using rule 80 (num -> NUM .)
    MINUS           reduce using rule 80 (num -> NUM .)
    MULT            reduce using rule 80 (num -> NUM .)
    DIV             reduce using rule 80 (num -> NUM .)
    MOD             reduce using rule 80 (num -> NUM .)
    EQUAL           reduce using rule 80 (num -> NUM .)
    DIFF            reduce using rule 80 (num -> NUM .)
    LESSEQ          reduce using rule 80 (num -> NUM .)
    GREATEQ         reduce using rule 80 (num -> NUM .)
    GREATER         reduce using rule 80 (num -> NUM .)
    LESS            reduce using rule 80 (num -> NUM .)
    AND             reduce using rule 80 (num -> NUM .)
    OR              reduce using rule 80 (num -> NUM .)
    SCOLON          reduce using rule 80 (num -> NUM .)
    COMMA           reduce using rule 80 (num -> NUM .)
    RPAREN          reduce using rule 80 (num -> NUM .)
    RBRAC           reduce using rule 80 (num -> NUM .)
    COLON           reduce using rule 80 (num -> NUM .)
    RCBRAC          reduce using rule 80 (num -> NUM .)


state 34

    (5) decFunc -> type ID LPAREN paramList . RPAREN LCBRAC block RCBRAC

    RPAREN          shift and go to state 46


state 35

    (83) logic -> FALSE .

    QMARK           reduce using rule 83 (logic -> FALSE .)
    PLUS            reduce using rule 83 (logic -> FALSE .)
    MINUS           reduce using rule 83 (logic -> FALSE .)
    MULT            reduce using rule 83 (logic -> FALSE .)
    DIV             reduce using rule 83 (logic -> FALSE .)
    MOD             reduce using rule 83 (logic -> FALSE .)
    EQUAL           reduce using rule 83 (logic -> FALSE .)
    DIFF            reduce using rule 83 (logic -> FALSE .)
    LESSEQ          reduce using rule 83 (logic -> FALSE .)
    GREATEQ         reduce using rule 83 (logic -> FALSE .)
    GREATER         reduce using rule 83 (logic -> FALSE .)
    LESS            reduce using rule 83 (logic -> FALSE .)
    AND             reduce using rule 83 (logic -> FALSE .)
    OR              reduce using rule 83 (logic -> FALSE .)
    SCOLON          reduce using rule 83 (logic -> FALSE .)
    COMMA           reduce using rule 83 (logic -> FALSE .)
    RPAREN          reduce using rule 83 (logic -> FALSE .)
    RBRAC           reduce using rule 83 (logic -> FALSE .)
    COLON           reduce using rule 83 (logic -> FALSE .)
    RCBRAC          reduce using rule 83 (logic -> FALSE .)


state 36

    (81) str -> STR .

    QMARK           reduce using rule 81 (str -> STR .)
    PLUS            reduce using rule 81 (str -> STR .)
    MINUS           reduce using rule 81 (str -> STR .)
    MULT            reduce using rule 81 (str -> STR .)
    DIV             reduce using rule 81 (str -> STR .)
    MOD             reduce using rule 81 (str -> STR .)
    EQUAL           reduce using rule 81 (str -> STR .)
    DIFF            reduce using rule 81 (str -> STR .)
    LESSEQ          reduce using rule 81 (str -> STR .)
    GREATEQ         reduce using rule 81 (str -> STR .)
    GREATER         reduce using rule 81 (str -> STR .)
    LESS            reduce using rule 81 (str -> STR .)
    AND             reduce using rule 81 (str -> STR .)
    OR              reduce using rule 81 (str -> STR .)
    SCOLON          reduce using rule 81 (str -> STR .)
    COMMA           reduce using rule 81 (str -> STR .)
    RPAREN          reduce using rule 81 (str -> STR .)
    RBRAC           reduce using rule 81 (str -> STR .)
    COLON           reduce using rule 81 (str -> STR .)
    RCBRAC          reduce using rule 81 (str -> STR .)


state 37

    (9) varSpec -> ID ATTR literal .

    COMMA           reduce using rule 9 (varSpec -> ID ATTR literal .)
    SCOLON          reduce using rule 9 (varSpec -> ID ATTR literal .)


state 38

    (77) literal -> num .

    QMARK           reduce using rule 77 (literal -> num .)
    PLUS            reduce using rule 77 (literal -> num .)
    MINUS           reduce using rule 77 (literal -> num .)
    MULT            reduce using rule 77 (literal -> num .)
    DIV             reduce using rule 77 (literal -> num .)
    MOD             reduce using rule 77 (literal -> num .)
    EQUAL           reduce using rule 77 (literal -> num .)
    DIFF            reduce using rule 77 (literal -> num .)
    LESSEQ          reduce using rule 77 (literal -> num .)
    GREATEQ         reduce using rule 77 (literal -> num .)
    GREATER         reduce using rule 77 (literal -> num .)
    LESS            reduce using rule 77 (literal -> num .)
    AND             reduce using rule 77 (literal -> num .)
    OR              reduce using rule 77 (literal -> num .)
    SCOLON          reduce using rule 77 (literal -> num .)
    RPAREN          reduce using rule 77 (literal -> num .)
    RBRAC           reduce using rule 77 (literal -> num .)
    COMMA           reduce using rule 77 (literal -> num .)
    COLON           reduce using rule 77 (literal -> num .)
    RCBRAC          reduce using rule 77 (literal -> num .)


state 39

    (78) literal -> str .

    QMARK           reduce using rule 78 (literal -> str .)
    PLUS            reduce using rule 78 (literal -> str .)
    MINUS           reduce using rule 78 (literal -> str .)
    MULT            reduce using rule 78 (literal -> str .)
    DIV             reduce using rule 78 (literal -> str .)
    MOD             reduce using rule 78 (literal -> str .)
    EQUAL           reduce using rule 78 (literal -> str .)
    DIFF            reduce using rule 78 (literal -> str .)
    LESSEQ          reduce using rule 78 (literal -> str .)
    GREATEQ         reduce using rule 78 (literal -> str .)
    GREATER         reduce using rule 78 (literal -> str .)
    LESS            reduce using rule 78 (literal -> str .)
    AND             reduce using rule 78 (literal -> str .)
    OR              reduce using rule 78 (literal -> str .)
    SCOLON          reduce using rule 78 (literal -> str .)
    RPAREN          reduce using rule 78 (literal -> str .)
    RBRAC           reduce using rule 78 (literal -> str .)
    COMMA           reduce using rule 78 (literal -> str .)
    COLON           reduce using rule 78 (literal -> str .)
    RCBRAC          reduce using rule 78 (literal -> str .)


state 40

    (79) literal -> logic .

    QMARK           reduce using rule 79 (literal -> logic .)
    PLUS            reduce using rule 79 (literal -> logic .)
    MINUS           reduce using rule 79 (literal -> logic .)
    MULT            reduce using rule 79 (literal -> logic .)
    DIV             reduce using rule 79 (literal -> logic .)
    MOD             reduce using rule 79 (literal -> logic .)
    EQUAL           reduce using rule 79 (literal -> logic .)
    DIFF            reduce using rule 79 (literal -> logic .)
    LESSEQ          reduce using rule 79 (literal -> logic .)
    GREATEQ         reduce using rule 79 (literal -> logic .)
    GREATER         reduce using rule 79 (literal -> logic .)
    LESS            reduce using rule 79 (literal -> logic .)
    AND             reduce using rule 79 (literal -> logic .)
    OR              reduce using rule 79 (literal -> logic .)
    SCOLON          reduce using rule 79 (literal -> logic .)
    RPAREN          reduce using rule 79 (literal -> logic .)
    RBRAC           reduce using rule 79 (literal -> logic .)
    COMMA           reduce using rule 79 (literal -> logic .)
    COLON           reduce using rule 79 (literal -> logic .)
    RCBRAC          reduce using rule 79 (literal -> logic .)


state 41

    (82) logic -> TRUE .

    QMARK           reduce using rule 82 (logic -> TRUE .)
    PLUS            reduce using rule 82 (logic -> TRUE .)
    MINUS           reduce using rule 82 (logic -> TRUE .)
    MULT            reduce using rule 82 (logic -> TRUE .)
    DIV             reduce using rule 82 (logic -> TRUE .)
    MOD             reduce using rule 82 (logic -> TRUE .)
    EQUAL           reduce using rule 82 (logic -> TRUE .)
    DIFF            reduce using rule 82 (logic -> TRUE .)
    LESSEQ          reduce using rule 82 (logic -> TRUE .)
    GREATEQ         reduce using rule 82 (logic -> TRUE .)
    GREATER         reduce using rule 82 (logic -> TRUE .)
    LESS            reduce using rule 82 (logic -> TRUE .)
    AND             reduce using rule 82 (logic -> TRUE .)
    OR              reduce using rule 82 (logic -> TRUE .)
    SCOLON          reduce using rule 82 (logic -> TRUE .)
    COMMA           reduce using rule 82 (logic -> TRUE .)
    RPAREN          reduce using rule 82 (logic -> TRUE .)
    RBRAC           reduce using rule 82 (logic -> TRUE .)
    COLON           reduce using rule 82 (logic -> TRUE .)
    RCBRAC          reduce using rule 82 (logic -> TRUE .)


state 42

    (6) decProc -> ID LPAREN paramList RPAREN LCBRAC . block RCBRAC
    (20) block -> . varDecList stmtList
    (21) varDecList -> . varDec varDecList
    (22) varDecList -> . empty
    (7) varDec -> . type varSpecSeq SCOLON
    (91) empty -> .
    (84) type -> . INT
    (85) type -> . STRING
    (86) type -> . BOOL

    IF              reduce using rule 91 (empty -> .)
    WHILE           reduce using rule 91 (empty -> .)
    FOR             reduce using rule 91 (empty -> .)
    BREAK           reduce using rule 91 (empty -> .)
    RETURN          reduce using rule 91 (empty -> .)
    READ            reduce using rule 91 (empty -> .)
    WRITE           reduce using rule 91 (empty -> .)
    ID              reduce using rule 91 (empty -> .)
    RCBRAC          reduce using rule 91 (empty -> .)
    INT             shift and go to state 3
    STRING          shift and go to state 11
    BOOL            shift and go to state 7

    varDec                         shift and go to state 47
    block                          shift and go to state 50
    type                           shift and go to state 49
    empty                          shift and go to state 48
    varDecList                     shift and go to state 51

state 43

    (89) paramSeq -> param COMMA paramSeq .

    RPAREN          reduce using rule 89 (paramSeq -> param COMMA paramSeq .)


state 44

    (19) param -> type ID LBRAC . RBRAC

    RBRAC           shift and go to state 52


state 45

    (10) varSpec -> ID LBRAC num RBRAC .
    (11) varSpec -> ID LBRAC num RBRAC . ATTR LCBRAC literalSeq RCBRAC

    COMMA           reduce using rule 10 (varSpec -> ID LBRAC num RBRAC .)
    SCOLON          reduce using rule 10 (varSpec -> ID LBRAC num RBRAC .)
    ATTR            shift and go to state 53


state 46

    (5) decFunc -> type ID LPAREN paramList RPAREN . LCBRAC block RCBRAC

    LCBRAC          shift and go to state 54


state 47

    (21) varDecList -> varDec . varDecList
    (21) varDecList -> . varDec varDecList
    (22) varDecList -> . empty
    (7) varDec -> . type varSpecSeq SCOLON
    (91) empty -> .
    (84) type -> . INT
    (85) type -> . STRING
    (86) type -> . BOOL

    IF              reduce using rule 91 (empty -> .)
    WHILE           reduce using rule 91 (empty -> .)
    FOR             reduce using rule 91 (empty -> .)
    BREAK           reduce using rule 91 (empty -> .)
    RETURN          reduce using rule 91 (empty -> .)
    READ            reduce using rule 91 (empty -> .)
    WRITE           reduce using rule 91 (empty -> .)
    ID              reduce using rule 91 (empty -> .)
    RCBRAC          reduce using rule 91 (empty -> .)
    LCBRAC          reduce using rule 91 (empty -> .)
    INT             shift and go to state 3
    STRING          shift and go to state 11
    BOOL            shift and go to state 7

    varDec                         shift and go to state 47
    type                           shift and go to state 49
    empty                          shift and go to state 48
    varDecList                     shift and go to state 55

state 48

    (22) varDecList -> empty .

    IF              reduce using rule 22 (varDecList -> empty .)
    WHILE           reduce using rule 22 (varDecList -> empty .)
    FOR             reduce using rule 22 (varDecList -> empty .)
    BREAK           reduce using rule 22 (varDecList -> empty .)
    RETURN          reduce using rule 22 (varDecList -> empty .)
    READ            reduce using rule 22 (varDecList -> empty .)
    WRITE           reduce using rule 22 (varDecList -> empty .)
    ID              reduce using rule 22 (varDecList -> empty .)
    RCBRAC          reduce using rule 22 (varDecList -> empty .)
    LCBRAC          reduce using rule 22 (varDecList -> empty .)


state 49

    (7) varDec -> type . varSpecSeq SCOLON
    (12) varSpecSeq -> . varSpec COMMA varSpecSeq
    (13) varSpecSeq -> . varSpec
    (8) varSpec -> . ID
    (9) varSpec -> . ID ATTR literal
    (10) varSpec -> . ID LBRAC num RBRAC
    (11) varSpec -> . ID LBRAC num RBRAC ATTR LCBRAC literalSeq RCBRAC

    ID              shift and go to state 31

    varSpec                        shift and go to state 14
    varSpecSeq                     shift and go to state 15

state 50

    (6) decProc -> ID LPAREN paramList RPAREN LCBRAC block . RCBRAC

    RCBRAC          shift and go to state 56


state 51

    (20) block -> varDecList . stmtList
    (75) stmtList -> . stmt stmtList
    (76) stmtList -> . empty
    (45) stmt -> . ifStmt
    (46) stmt -> . whileStmt
    (47) stmt -> . forStmt
    (48) stmt -> . breakStmt
    (49) stmt -> . returnStmt
    (50) stmt -> . readStmt
    (51) stmt -> . writeStmt
    (52) stmt -> . assign SCOLON
    (53) stmt -> . subCall SCOLON
    (91) empty -> .
    (54) ifStmt -> . IF LPAREN exp RPAREN LCBRAC block RCBRAC
    (55) ifStmt -> . IF LPAREN exp RPAREN LCBRAC block RCBRAC ELSE RCBRAC block LCBRAC
    (56) whileStmt -> . WHILE LPAREN exp RPAREN LCBRAC block RCBRAC
    (57) forStmt -> . FOR LPAREN assign SCOLON exp SCOLON assign RPAREN LCBRAC block RCBRAC
    (58) breakStmt -> . BREAK SCOLON
    (59) returnStmt -> . RETURN SCOLON
    (60) returnStmt -> . RETURN exp SCOLON
    (61) returnStmt -> . RETURN error SCOLON
    (62) readStmt -> . READ var SCOLON
    (63) writeStmt -> . WRITE expList SCOLON
    (64) assign -> . var ATTR exp
    (65) assign -> . var AVALPLUS exp
    (66) assign -> . var AVALMINUS exp
    (67) assign -> . var AVALMULT exp
    (68) assign -> . var AVALDIV exp
    (69) assign -> . var AVALMOD exp
    (70) subCall -> . ID LPAREN expList RPAREN
    (23) var -> . ID
    (24) var -> . ID LBRAC exp RBRAC

    RCBRAC          reduce using rule 91 (empty -> .)
    LCBRAC          reduce using rule 91 (empty -> .)
    IF              shift and go to state 71
    WHILE           shift and go to state 60
    FOR             shift and go to state 65
    BREAK           shift and go to state 74
    RETURN          shift and go to state 57
    READ            shift and go to state 59
    WRITE           shift and go to state 68
    ID              shift and go to state 70

    writeStmt                      shift and go to state 72
    readStmt                       shift and go to state 61
    breakStmt                      shift and go to state 66
    subCall                        shift and go to state 58
    stmt                           shift and go to state 67
    assign                         shift and go to state 77
    whileStmt                      shift and go to state 62
    forStmt                        shift and go to state 75
    stmtList                       shift and go to state 76
    var                            shift and go to state 63
    returnStmt                     shift and go to state 69
    ifStmt                         shift and go to state 73
    empty                          shift and go to state 64

state 52

    (19) param -> type ID LBRAC RBRAC .
